<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="242dp"
        android:layout_height="117dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_tripName_trips" />

    <TextView
        android:id="@+id/tv_city_trips"
        android:layout_width="234dp"
        android:layout_height="107dp"
        android:layout_below="@+id/tv_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="9dp"
        android:text="@string/tv_city_trips" />

    <Button
        android:id="@+id/btn_addPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="33dp"
        android:layout_toEndOf="@+id/tv_description"
        android:text="@string/btn_addPlace"
        android:textSize="30sp" />
</RelativeLayout>